# html-text

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
plainhtml/: __init__.py  core.py  dom.py  utils.py
tests/: test_core.py  test_dom.py  test_parser.py  test_utils.py
tests/testcases/: snapaddy_imprint.html  snapaddy_imprint.txt
