[tool.poetry]
name = "plainhtml"
version = "0.1.0"
description = "Extract plain text from HTML"
readme = "README.md"
authors = ["Severin Simmler <s.simmler@snapaddy.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.2.1"

[tool.black]
line-length = 99

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
